--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,7 +22,7 @@ jobs:
       - run:
           name: Push docker image to DockerHub
           command: |
-            docker login -u ${DOCKERHUB_USERNAME}" -p ${DOCKERHUB_PASSWORD}
+            docker login -u ${DOCKERHUB_USERNAME} -p ${DOCKERHUB_PASSWORD}
             docker push ${DOCKERHUB_USERNAME}/devops-practice:latest
 
 workflows:
