--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,12 +36,12 @@ jobs:
       - run:
           name: Set env
           command: |
-            git config --global user.name ${GITHUB_USER}
-            git config --global user.email ${GITHUB_EMAIL}
-            echo "export HASH=$(git rev-parse $CIRCLE_TAG)" >> $BASH_ENV
-            echo "export HASH_SHORT=$(git rev-parse --short $CIRCLE_TAG)" >> $BASH_ENV
-            # タグのコミットメッセージを取得
-            git show --no-decorate -s $CIRCLE_TAG > /tmp/tag-describe.txt
+            git config --global user.name ${GITHUB_USER}                               # コミットログ用のユーザーID
+            git config --global user.email ${GITHUB_EMAIL}                             # コミットログ用のe-mailアドレス
+            echo "export MANIFEST_REPO=devops-practice-manifest" >> $BASH_ENV             # マニフェストのリポジトリ名
+            echo "export HASH=$(git rev-parse $CIRCLE_TAG)" >> $BASH_ENV               # コミットのハッシュ
+            echo "export HASH_SHORT=$(git rev-parse --short $CIRCLE_TAG)" >> $BASH_ENV # コミットのハッシュ(短縮)
+            git show --no-decorate -s $CIRCLE_TAG > /tmp/tag-describe.txt              # コミットメッセージ
 
       - run:
           name: Install hub
@@ -60,7 +60,7 @@ jobs:
       - run:
           name: Clone manifest repository
           command: |
-            git clone https://${GITHUB_USER}:${GITHUB_TOKEN}@github.com/koirand/devops-practice-manifest /tmp/manifest
+            git clone https://${GITHUB_USER}:${GITHUB_TOKEN}@github.com/koirand/${MANIFEST_REPO} /tmp/manifest
 
       - run:
           name: Update manifest
@@ -69,7 +69,7 @@ jobs:
             git checkout -b ${CIRCLE_TAG}-${HASH_SHORT}
             (cd /tmp/manifest/sample-app/${CIRCLE_TAG} && kustomize edit set image koirand/devops-practice:${HASH})
             git add -A
-            git commit -m "Update-${CIRCLE_TAG}-${HASH_SHORT}-$(date +"%Y%m%d")"
+            git commit -m "Update-${CIRCLE_TAG}-${HASH_SHORT}-$(date +'%Y%m%d')"
             git push origin HEAD
 
       - run:
