--- a/.editorconfig
+++ b/.editorconfig
@@ -5,7 +5,9 @@ end_of_line = lf
 insert_final_newline = true
 charset = utf-8
 trim_trailing_whitespace = true
+indent_size = 2
+indent_style = space
 
-[{*.go,Makefile}]
-indent_style = tab
+[*.md]
+trim_trailing_whitespace = false
 indent_size = 4
